feat: authentication for user

--- a/cmsc100-group5-react-app/package.json
+++ b/cmsc100-group5-react-app/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.10",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
