--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,8 @@
   "scripts":{
     "start": "nodemon index.js"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "nodemon": "^2.0.22"  
+  }
 }
