--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,16 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.0"
   },
-  "scripts":{
+  "scripts": {
     "start": "nodemon index.js"
   },
   "type": "module",
   "devDependencies": {
-    "nodemon": "^2.0.22"  
+    "nodemon": "^2.0.22"
   }
 }
