--- a/cmsc100-group5-react-app/package.json
+++ b/cmsc100-group5-react-app/package.json
@@ -23,6 +23,7 @@
     "@testing-library/user-event": "^13.5.0",
     "babel-plugin-macros": "^3.1.0",
     "materialize-css": "^1.0.0-rc.2",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.0.3",
